--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <link rel="shortcut icon"type="image/png"href="C:\Users\Bra Kwame\Documents\techleadsgh\images\logo.jpg">
+  <link rel="shortcut icon"type="image/png"href="img/fav.png">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
