--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav" style="background-color: black;">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Creative Innovations</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">Creative Innovations Ghana</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
