--- a/store.html
+++ b/store.html
@@ -48,7 +48,7 @@
  <!-- Navigation -->
  <nav style="background-color:black;" class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
-          <a class="navbar-brand js-scroll-trigger" href="#page-top">Creative Innovations Ghana</a>
+          <a class="navbar-brand js-scroll-trigger" href="#page-top">Techmart Ghana</a>
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             Menu
             <i class="fas fa-bars"></i>
